# SolanaRate

./: Cargo.toml  README.md  VPS_RUN.md  auto_deploy.sh  build.rs  deploy_vps.sh
proto/: amm.proto  geyser.proto
src/: amm_types.rs  client.rs  main.rs  rate_calculator.rs  table_ui.rs
