[package]
name = "solana-amm-rate-calculator"
version = "0.1.0"
edition = "2021"
default-run = "solana-amm-rate-calculator"

[[bin]]
name = "solana-amm-rate-calculator"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rand = "0.8"

[build-dependencies]
tonic-build = "0.11"